--- a/provider/ums-admin-provider-service/pom.xml
+++ b/provider/ums-admin-provider-service/pom.xml
@@ -125,6 +125,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <!-- Projects End -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
