--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -16,6 +16,7 @@
         <spring-cloud-alibaba.verion>0.9.0.RELEASE</spring-cloud-alibaba.verion>
         <alibaba-spring-context-support.version>1.0.2</alibaba-spring-context-support.version>
         <mysql.version>5.1.47</mysql.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
     <licenses>
         <license>
@@ -118,6 +119,12 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
